Fix Find my address styling and button links on mobile

--- a/NHS111/NHS111.Web/Content/css_NhsUK/personaldetails.css
+++ b/NHS111/NHS111.Web/Content/css_NhsUK/personaldetails.css
@@ -7,7 +7,13 @@
     background-color: white !important;
     background-image: url("/content/images/icons/icon-link-go.png");
     background-repeat: no-repeat;
-    background-position: 100% 50%;
+    background-position: 85% 60%;
+}
+
+@media screen and (min-width: 641px) {
+    .button-link {
+        background-position: 100% 50%;
+    }
 }
 
 .button-link:link, .button-link:hover, .button-link:focus, .button-link:visited {
@@ -65,11 +71,18 @@
     background-image: url("/content/images/icons/icon-button-next.svg");
     background-repeat: no-repeat;
     background-position: 85% 60%;
+    margin-top: 10px;
 }
 
     .button.find-address:link, .button.find-address:hover, .button.find-address:focus, .button.find-address:visited {
         background-color: #333333;
     }
+
+@media screen and (min-width: 641px) {
+    .button.find-address {
+        margin-top: 0;
+    }
+}
 
 .button.button-submit-details {
     padding-right: 5rem;
